<resources>
    <string name="app_name">Accommodation Recommendations</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Name </string>
    <string name="prompt_title">Title</string>
    <string name="prompt_res_name">Res Name</string>
    <string name="prompt_addressline1">Address Line 1</string>
    <string name="prompt_addressline2">Address Line 2</string>
    <string name="prompt_res_suburb">Suburb</string>
    <string name="prompt_res_province">Province</string>
    <string name="prompt_res_city">City</string>
    <string name="prompt_res_postal_code">Postal Code</string>
    <string name="accommodates_males">Accommodates Males</string>
    <string name="accommodates_females">Accommodates Females</string>
    <string name="single_rooms">Has Single Rooms</string>
    <string name="sharing_rooms">Has Sharing Rooms</string>
    <string name="has_gym">Has Gym</string>
    <string name="free_wifi">Has Free Wi-Fi</string>
    <string name="washing_machines">Has Washing Machines</string>
    <string name="provides_security">Provides Security</string>
    <string name="paid_parking">Has Paid Parking</string>
    <string name="has_shuttle">Has Shuttles</string>
    <string name="occupy_male">Male Room</string>
    <string name="occupy_female">Female Room</string>
    <string name="single_room">Single Room</string>
    <string name="sharing_room">Sharing Room</string>
    <string name="need_gym">Gym</string>
    <string name="need_free_wifi">Free Wi-Fi</string>
    <string name="need_washing_machines">Washing Machines</string>
    <string name="need_parking">Need Parking</string>
    <string name="need_security">Security</string>
    <string name="prompt_res_phone_numbers">Phone Number</string>
    <string name="title_activity_maps">Map</string>
</resources>